// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating Components from Fela rules should allow nested theme objects 1`] = `
Object {
  "css": ".a {
    color: black
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components from Fela rules should compose passThrough props 1`] = `
Object {
  "css": "",
  "html": "<div data-foo=\\"bar\\" color=\\"red\\" class=\\"\\"></div>",
}
`;

exports[`Creating Components from Fela rules should compose styles 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16px
}

.c {
    line-height: 1.2
}",
  "html": "<div class=\\"a b c\\"></div>",
}
`;

exports[`Creating Components from Fela rules should extend the rule properties with a function 1`] = `
Object {
  "css": ".a {
    color: blue
}

.b {
    font-size: 14px
}

.c {
    background-color: red
}",
  "html": "<div class=\\"a b c\\"></div>",
}
`;

exports[`Creating Components from Fela rules should extend the rule properties with an object 1`] = `
Object {
  "css": ".a {
    color: blue
}

.b {
    font-size: 14px
}

.c {
    background-color: red
}",
  "html": "<div class=\\"a b c\\"></div>",
}
`;

exports[`Creating Components from Fela rules should include defaultProps if provided 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\">red</div>",
}
`;

exports[`Creating Components from Fela rules should not pass props to the element 1`] = `
Object {
  "css": ".a {
    font-size: 16px
}",
  "html": "<div class=\\"a\\"></div>",
}
`;

exports[`Creating Components from Fela rules should only use the rule name as displayName 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components from Fela rules should pass all props to the element 1`] = `
Object {
  "css": ".a {
    font-size: 16px
}",
  "html": "<div data-foo=\\"bar\\" data-bar=\\"baz\\" class=\\"a\\"></div>",
}
`;

exports[`Creating Components from Fela rules should pass extended special props to the component 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16
}",
  "html": "<div>testProp exists</div>",
}
`;

exports[`Creating Components from Fela rules should pass extended special props to the component 2`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16
}",
  "html": "<div>testProp does not exist</div>",
}
`;

exports[`Creating Components from Fela rules should pass special props to the component 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components from Fela rules should pass special props to the component 2`] = `
Object {
  "css": ".a {
    font-size: 16px
}",
  "html": "<i class=\\"a\\"></i>",
}
`;

exports[`Creating Components from Fela rules should pass style, as, id, className and innerRef to composed components 1`] = `
Object {
  "css": ".a {
    color: green
}

.b {
    font-size: 16px
}

.c {
    line-height: 1.2
}",
  "html": "<i class=\\"a b c\\"></i>",
}
`;

exports[`Creating Components from Fela rules should render fela rules depending on the passed props 1`] = `
Object {
  "css": ".a {
    color: black
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components from Fela rules should replace rare unallowed symbols in className with underscore 1`] = `
Object {
  "css": ".rule_1_______________3vb6hs {
    font-size: 16px
}",
  "html": "<div>Hello World</div>",
}
`;

exports[`Creating Components from Fela rules should replace unallowed symbols in className with underscore 1`] = `
Object {
  "css": ".rule_connect_Component___3vb6hs {
    font-size: 16px
}",
  "html": "<div>Hello World</div>",
}
`;

exports[`Creating Components from Fela rules should use a dev-friendly className and the selectorPrefix 1`] = `
Object {
  "css": ".fela-Button_div__3vb6hs {
    font-size: 16px
}",
  "html": "<div class=\\"fela-Button_div__3vb6hs\\"></div>",
}
`;

exports[`Creating Components from Fela rules should use a dev-friendly className with monolithic renderer 1`] = `
Object {
  "css": ".Button_div__3vb6hs {
    font-size: 16px
}",
  "html": "<div class=\\"Button_div__3vb6hs\\"></div>",
}
`;

exports[`Creating Components from Fela rules should use the theme for static rendering by default 1`] = `
Object {
  "css": ".a {
    color: red
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components with a Proxy for props from Fela rules should not pass props used in rules to the element 1`] = `
Object {
  "css": ".a {
    color: true
}

.b {
    font-size: 16px
}",
  "html": "<div data-foo=\\"bar\\" class=\\"a b\\"></div>",
}
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props except innerRef 1`] = `
Object {
  "css": ".a {
    color: black
}

.b {
    font-size: 16px
}",
  "html": "<div class=\\"a b\\"></div>",
}
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props used in rules specified in passThroughProps to the element 1`] = `
Object {
  "css": ".a {
    color: blue
}

.b {
    font-size: 16px
}",
  "html": "<div data-color=\\"blue\\" data-foo=\\"bar\\" class=\\"a b\\"></div>",
}
`;
